static/css/parts/ViewletSourceControl.css
.SourceControl {
  display: flex;
  flex-direction: column;
}

.SourceControl:focus {
  outline: var(--FocusOutline);
  outline-offset: -1px;
  outline-style: solid;
  outline-width: 1px;
}

.ViewSourceControlInput {
  /* margin: 20px; */
}

.SourceControlHeader {
  padding: 5px 12px 6px 20px;
  contain: content;
}

.ViewSourceControlInput[aria-busy] {
  background: lightblue;
}

.ListItems {
  user-select: none;
}

.ListItems.DropTarget {
  background: darkblue;
}

.SourceControlItems {
  flex: 1;
  contain: strict;
}

.SourceControlButton {
  width: 20px;
  height: 20px;
  contain: strict;
  flex-shrink: 0;
  border: none;
  color: #c5c5c5;
  background: transparent;
  cursor: pointer;
}

.SourceControlButton[disabled] {
  color: rgba(204, 204, 204, 0.5);
}

.SourceControlButton:hover {
  background-color: hsla(0, 0%, 100%, 0.1);
}

.DecorationIcon {
  width: 14px;
  height: 14px;
  contain: strict;
  margin-right: 8px;
}

.SourceControlBadge {
}

